--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -7,12 +7,14 @@ body{
     padding: 0;
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
+    // width: 1440px;
+    // margin: 0 auto;
 
 }
 
 #app {
-    max-width: 1440px;
-    margin: 0 auto;
+    // max-width: 1440px;
+    // margin: 0 auto;
   }
   
   #nav {
@@ -27,3 +29,4 @@ body{
       }
     }
   }
+  
