--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -18,15 +18,35 @@ body{
   }
   
   #nav {
-    padding: 30px;
+    width: 100%;
+    height: 70px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #151515;
   
     a {
-      font-weight: bold;
-      color: #2c3e50;
+        font-size: 1.2em;
+        margin: 0 0.3em;
+        font-weight: bold;
+        color: #fff;
+        text-decoration: none;
   
       &.router-link-exact-active {
-        color: #42b983;
+        color:white;
       }
     }
   }
+
+
+  .smooth-enter-active, .smooth-leave-active {
+    transition: opacity 0.5s,transform 0.5s;
+  }
+  .smooth-enter, .smooth-leave-to /* .fade-leave-active below version 2.1.8 */ {
+    opacity: 0;
+    transform: translateX(-100%);
+  }
+  
+
+
   
