--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -1,5 +1,6 @@
 @import 'variables';
 @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,300;1,400;1,500&display=swap');
+
 body{
     background-color: #151515;
     color: #fff;
@@ -11,7 +12,6 @@ body{
     // margin: 0 auto;
 
 }
-
 
 
   
@@ -67,7 +67,9 @@ body{
     grid-gap: 1em;
     grid-auto-rows: minmax(300px, auto);
     max-width: 1440px;
+    min-height: 100vh;
     margin: 0 auto;
+
 
 
 }
