--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -91,3 +91,18 @@ body{
     transform: translateX(10px);
     opacity: 0;
   }
+
+
+
+  .negative{
+    border: 3px solid #f00;
+    color: #f00;
+}
+.average{
+    border: 3px solid #fc3;
+    color: #fc3;
+}
+.positive{
+    border: 3px solid #6c3;
+    color: #6c3;
+}
