--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -32,7 +32,7 @@ body{
         text-decoration: none;
   
       &.router-link-exact-active {
-        color:white;
+        color:yellow;
       }
     }
   }
