--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -14,29 +14,6 @@ body{
 }
 
 
-  
-  
-//   #nav {
-//     width: 100%;
-//     height: 70px;
-//     display: flex;
-//     justify-content: center;
-//     align-items: center;
-//     background-color: #151515;
-  
-//     a {
-//         font-size: 1.2em;
-//         margin: 0 0.3em;
-//         font-weight: bold;
-//         color: #fff;
-//         text-decoration: none;
-  
-//       &.router-link-exact-active {
-//         color:yellow;
-//       }
-//     }
-//   }
-
 
   .smooth-enter-active, .smooth-leave-active {
     transition: opacity 0.5s,transform 0.5s;
@@ -46,16 +23,11 @@ body{
     transform: translateX(-100%);
   }
 
-  .fade-enter-active,
-  .fade-leave-active {
-    transition-duration: 0.5s;
-    transition-property: opacity;
-    transition-timing-function: ease;
+  .fade-enter-active, .fade-leave-active {
+    transition: opacity .5s;
   }
-  
-  .fade-enter,
-  .fade-leave-active {
-    opacity: 0
+  .fade-enter, .fade-leave-to {
+    opacity: 0;
   }
   
 
@@ -95,19 +67,7 @@ body{
 
 
 
-/* Enter and leave animations can use different */
-/* durations and timing functions.              */
-.slide-fade-enter-active {
-    transition: all .3s ease;
-  }
-  .slide-fade-leave-active {
-    transition: all .8s cubic-bezier(1.0, 0.5, 0.8, 1.0);
-  }
-  .slide-fade-enter, .slide-fade-leave-to
-  /* .slide-fade-leave-active below version 2.1.8 */ {
-    transform: translateX(10px);
-    opacity: 0;
-  }
+
 
 
 
