added variables/fixed img slider+some design changes

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,1 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;900&display=swap');
+
+$base-width:1440px;
+
+
+$primary-bg:#151515;
+$secondary-bg:#202020;
+
+$border-small: 10px;
+$border-medium: 15px;
+$border-large: 20px;
